--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,12 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&family=VT323&display=swap"
+      rel="stylesheet"
+    />
     <title>React App</title>
   </head>
   <body>
